--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ section{
 }
 .mission2022 img{
     width: 100%;
-    margin-top:-120px;
+    margin-top:-170px;
 }
 .color{
     color: brown;
@@ -26,6 +26,8 @@ h1{
 }
 .box{
     border-left: 5px solid rgb(3, 104, 96);
+    
+    
 }
 .link{
     text-decoration: none;
@@ -37,13 +39,14 @@ h1{
 }
 
 
-.mission-second-part{
-    color: darkmagenta;
-}
+
 .My-Mission{
     margin: 0%;
     padding: 0%;
     position: absolute;
-    
-    
+    top: 50%;
+    left: 50%;
+    transform: translateX(-300px);
+    margin-top: 400px;
+    color: rgb(23, 5, 51);
 }
