--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 *{
     margin: 0%;
     padding: 0%;
+    box-sizing: border-box;
 }
 
-section{
+.display{
     display: flex;
 }
 .mission2022{
@@ -40,13 +41,16 @@ h1{
 
 
 
-.My-Mission{
-    margin: 0%;
-    padding: 0%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-300px);
-    margin-top: 400px;
-    color: rgb(23, 5, 51);
+.My-Mission h1{
+    margin-bottom: 200px;
+    text-align: center;
+
+
+   
 }
+
+.second-display{
+    display: inline;
+   
+}
+
