--- a/style.css
+++ b/style.css
@@ -6,15 +6,18 @@
 
 .display{
     display: flex;
+    width: 100%;
 }
 .mission2022{
-    width: 50%;
-    padding: 10%;
+width: 50%;
+ padding: 10%;
+
 
 }
 .mission2022 img{
-    width: 100%;
-    margin-top:-170px;
+    max-width: 500px;
+    margin-top:-150px;
+    
 }
 .color{
     color: brown;
@@ -38,8 +41,7 @@ h1{
     padding: 8px 25px;
 
 }
-
-
+/* second part */
 
 .My-Mission h1{
     margin-bottom: 200px;
@@ -83,6 +85,20 @@ h1{
 }
 .illustrator img{
     width: 200px;
+}
+
+
+/* 3r part */
+section{
+    display: flex;
+    width: 50%;
+}
+.coding{
+    width: 50%;
+    padding: 10%;
+}
+.coding img{
+    width: 800px;
 }
 
 
